--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ python-dateutil>=2.8.2
 matplotlib>=3.7.0
 seaborn>=0.12.0
 
-# Optional: For web interface (future enhancement)
+# Optional: For web interface (future enhancement -- I will do later)
 flask>=2.3.0
 flask-cors>=4.0.0
 
